--- a/contacto.html
+++ b/contacto.html
@@ -61,7 +61,7 @@
                 para poder desarrollar páginas web con el uso de tecnologías como html,
                 css, JavaScript, entre otos. <br><br>
                 El principal programador es el Ingeniero <strong>Bryam Montero</strong> estudiado en la Universidad
-                Politécnica Salesiana, Campues el vecino ubicado en Ecuador-Azuay-Cuenca
+                Politécnica Salesiana, Campus el vecino ubicado en Ecuador-Azuay-Cuenca
             </p>
         </div>
 
